# thesis

./: .gitignore  README.md  all_predictions_batch_0.html  config - Shortcut.lnk  environment.yaml  euler_environment.yaml  main.py  main_forecasting.py  main_local.py  pyproject.toml  slurm-36894142.out
artifacts/run-083onwuc-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-0v9oje2x-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-18npo02w-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-1l6iv2ct-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-22n9hpye-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-2idmegvs-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-2nr1wbgd-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-2z86516g-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-437ueof9-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-51r4a7mq-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-5aqc117c-raw_metrics-v0/: raw_metrics.table.json
artifacts/run-5dqcdk7w-raw_metrics-v0/: raw_metrics.table.json
assets/datasets/: plot.html
config/: config.yaml
data/: ecgpks.npy  hr.npy  rrs.npy  rrxs.npy
ns_forecast.egg-info/: PKG-INFO  SOURCES.txt
scripts/: multi_gpu.sh  run.sh  run_ablation.sh  sip.sh  tune.sh
src/: callbacks.py  constants.py  cross_validation.py  datasets.py  exo_predictive_power.py  losses.py  metrics.py  normalization.py  plotting.py  streamlit_app.py  train_test_tune.py  utils.py  wandb_results.py
tests/: test_ablation.py  test_datasets.py  test_evaluation.py  test_models.py
(+822 files in other folders)
